--- a/a-note-for-lime.html
+++ b/a-note-for-lime.html
@@ -1,97 +1,108 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Limeoats | A Note For Lime</title>
-    <link rel="canonical" href="http://www.limeoats.com/a-note-for-lime.html" />
+    <link rel="canonical" href="http://www.limeoats.com/a-note-for-lime.html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/pple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="images/favicon/favicon-128.png" sizes="128x128" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/pple-touch-icon-152x152.png"/>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196"/>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96"/>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16"/>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-128.png" sizes="128x128"/>
     <meta name="application-name" content="&nbsp;"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="images/favicon/mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="images/favicon/mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png" />
+    <meta name="msapplication-TileColor" content="#FFFFFF"/>
+    <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png"/>
+    <meta name="msapplication-square70x70logo" content="images/favicon/mstile-70x70.png"/>
+    <meta name="msapplication-square150x150logo" content="images/favicon/mstile-150x150.png"/>
+    <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png"/>
+    <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png"/>
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
     <meta name="author" content="Limeoats">
 
     <script src="js/main.js" type="text/javascript"></script>
-    
+
     <script>
         //Google analytics
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-78321209-1', 'auto');
         ga('send', 'pageview');
     </script>
-  </head>
-  <body>
-    <meta itemprop="name" content="Limeoats | A Note For Lime">
-    <meta itemprop="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
-    <section class="page-header">
-      <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
-      <div class="project-icons"></div>
-    </section>
-    <section class="main-content">
-      <div>
+</head>
+<body>
+<meta itemprop="name" content="Limeoats | A Note For Lime">
+<meta itemprop="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
+<section class="page-header">
+    <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
+    <div class="project-icons"></div>
+</section>
+<section class="main-content">
+    <div>
         <h2>A Note For Lime</h2>
         <br/>
-        <img src="images/a-note-for-lime-screenshot-1.png" alt="A Note For Lime Image" />
+        <img src="images/a-note-for-lime-screenshot-1.png" alt="A Note For Lime Image"/>
         <br/><br/>
         <p>
-            Help Oats deliver an important note to Lime!<br /><br />
-            One year ago, Oats asked Lime to be his girlfriend and she said yes.<br /><br />
-            Now, exactly one year later, he has a note that must be delivered to her.<br /><br />
-            Help Oats make his way through 3 challenging, action-packed levels to reach his beautiful girlfriend on their anniversary.
+            Help Oats deliver an important note to Lime!<br/><br/>
+            One year ago, Oats asked Lime to be his girlfriend and she said yes.<br/><br/>
+            Now, exactly one year later, he has a note that must be delivered to her.<br/><br/>
+            Help Oats make his way through 3 challenging, action-packed levels to reach his beautiful girlfriend on
+            their anniversary.
         </p>
-        <hr />
+        <hr/>
         <p>
             Download A Note For Lime by clicking the button below for your operating system!
         </p>
         <a href="http://bit.ly/1Oakc8k" class="limeButton" style="width: 120px;" target="_blank">Windows Download</a>
         <a href="http://bit.ly/1liYcBo" class="limeButton" style="width: 120px;" target="_blank">Mac OS X Download</a>
-        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank" class="limeButton" style="width: 120px;">Donate to Limeoats</a>
-        <br />
-      </div>
-      <br />
-      <div id="disqus_thread"></div>
-        <script type="text/javascript">
-            /* * * CONFIGURATION VARIABLES * * */
-            var disqus_shortname = 'limeoats';
-            /* * * DON'T EDIT BELOW THIS LINE * * */
-            (function() {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-        </script>
-      <div>
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank"
+           class="limeButton" style="width: 120px;">Donate to Limeoats</a>
+        <br/>
+    </div>
+    <br/>
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES * * */
+        var disqus_shortname = 'limeoats';
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function () {
+            var dsq = document.createElement('script');
+            dsq.type = 'text/javascript';
+            dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <div>
         <footer class="site-footer">
-          <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
+            <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
         </footer>
-      </div>
-    </section>
-  </body>
+    </div>
+</section>
+</body>
 </html>
