--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
             a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
+                m = s.getElementsByTagName(o)[0];
             a.async = 1;
             a.src = g;
             m.parentNode.insertBefore(a, m)
@@ -76,16 +76,19 @@
         <div class="subsection">
             <a href="#"><h4>A Note For Lime: Reimagined</h4></a>
             <p>
-                A few years ago, I made a <a href="a-note-for-lime.html" target="_blank">game</a> for my girlfriend on our first anniversary.<br/>
-                Now, we're getting married in a few months, and I'm making a new (and very improved) version of this game.
-                Better graphics, brand new levels, and advanced platforming mechanics are just a few of the features being 
+                A few years ago, I made a <a href="a-note-for-lime.html" target="_blank">game</a> for my girlfriend on
+                our first anniversary.<br/>
+                Now, we're getting married in a few months, and I'm making a new (and very improved) version of this
+                game.
+                Better graphics, brand new levels, and advanced platforming mechanics are just a few of the features
+                being
                 added.<br/>More information coming soon.</br>
             </p>
         </div>
         <div class="subsection">
             <a href="lime2d.html"><h4>Lime2D</h4></a>
             <p>
-                An open source in-game map/animation editor for 2D C++ SFML game development projects. 
+                An open source in-game map/animation editor for 2D C++ SFML game development projects.
                 You can use it to edit maps and animations in real-time with your player, physics, collisions, and
                 everything else being rendered. This makes for extremely efficient 2D level creation.
             </p>
@@ -124,11 +127,13 @@
         <h3>Writing</h3>
         <div class="subsection">
             <a href="http://bit.ly/28RRuMV"><h4>CLion and CMake</h4></a>
-            <span class="writingDescription">Learn how to create static libraries and link to them in CLion with CMake.</span>
+            <span class="writingDescription">Learn how to create static libraries and link to them in CLion with
+                CMake.</span>
         </div>
         <div class="subsection">
             <a href="http://bit.ly/1XTa6yO"><h4>3D Lagging Camera in Unity</h4></a>
-            <span class="writingDescription">A tutorial on how I created a 3rd Person camera in Unity that follows and lags behind the player.</span>
+            <span class="writingDescription">A tutorial on how I created a 3rd Person camera in Unity that follows and
+                lags behind the player.</span>
         </div>
     </div>
     <hr/>
