--- a/lime2d.html
+++ b/lime2d.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Limeoats | Lime2D</title>
-    <link rel="canonical" href="http://www.limeoats.com/lime2d.html" />
+    <link rel="canonical" href="http://www.limeoats.com/lime2d.html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="images/favicon/favicon-128.png" sizes="128x128" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/apple-touch-icon-152x152.png"/>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196"/>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96"/>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16"/>
+    <link rel="icon" type="image/png" href="images/favicon/favicon-128.png" sizes="128x128"/>
     <meta name="application-name" content="&nbsp;"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="images/favicon/mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="images/favicon/mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png" />
+    <meta name="msapplication-TileColor" content="#FFFFFF"/>
+    <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png"/>
+    <meta name="msapplication-square70x70logo" content="images/favicon/mstile-70x70.png"/>
+    <meta name="msapplication-square150x150logo" content="images/favicon/mstile-150x150.png"/>
+    <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png"/>
+    <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png"/>
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="An open source in-game map/animation editor for 2D game development projects.">
     <meta name="author" content="Limeoats">
@@ -38,24 +38,31 @@
 
     <script>
         //Google analytics
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-78321209-1', 'auto');
         ga('send', 'pageview');
     </script>
-  </head>
-  <body>
-    <meta itemprop="name" content="Limeoats | Lime2D">
-    <meta itemprop="description" content="An open source in-game map/animation editor for 2D game development projects.">
-    <section class="page-header">
-      <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
-      <div class="project-icons"></div>
-    </section>
-    <section class="main-content">
-      <div>
+</head>
+<body>
+<meta itemprop="name" content="Limeoats | Lime2D">
+<meta itemprop="description" content="An open source in-game map/animation editor for 2D game development projects.">
+<section class="page-header">
+    <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
+    <div class="project-icons"></div>
+</section>
+<section class="main-content">
+    <div>
         <h2>Lime2D</h2>
         <!--<img src="images/lime2d_0.png" alt="Lime2D Screenshot" />-->
         <!-- <video height="300px" autoplay="" loop="" poster="">
@@ -73,78 +80,91 @@
             <br/><br/>
             The editor can be used in any C++ project using SFML on Windows, Mac OS X, and Linux.
         </p>
-            <hr/>
+        <hr/>
         <p>
-            <h3>Installation</h3>
-            I've created a video tutorial showing the process of getting Lime2D integrated with your game. There is also
-          a text version for those of you who don't want to follow an entire video.
-          <ul>
-              <li><a href="https://www.youtube.com/watch?v=iHNyOIGB0PE" target="_blank">Video</a></li>
-              <li><a href="http://www.limeoats.com/lime2d-setup-guide.html" target="_blank">Text version of the guide</a></li>
-          </ul>
-          If you have any trouble getting Lime2D installed / working or have any questions, please post below detailing exactly
-          what the issue is. I or somebody else will respond as soon as possible.
+        <h3>Installation</h3>
+        I've created a video tutorial showing the process of getting Lime2D integrated with your game. There is also
+        a text version for those of you who don't want to follow an entire video.
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=iHNyOIGB0PE" target="_blank">Video</a></li>
+            <li><a href="http://www.limeoats.com/lime2d-setup-guide.html" target="_blank">Text version of the guide</a>
+            </li>
+        </ul>
+        If you have any trouble getting Lime2D installed / working or have any questions, please post below detailing
+        exactly
+        what the issue is. I or somebody else will respond as soon as possible.
         </p>
         <hr/>
         <p>
-            <h3>Map editor</h3>
-            <img src="images/lime2d/map_editor_2.png" class="roundImage" style="width: 400px; margin-left: 00px; margin-top: 14px;" alt="map editor" />
-            <img src="images/lime2d/map_editor_3.png" class="roundImage" style="width: 400px; margin-left: 10px; margin-top: 14px;" alt="map editor" />
-            <ul>
-                <li>Efficient custom map format created by me</li>
-                <li>Create brand news maps of any size while already in-game</li>
-                <li>
-                  Easy map configuration
-                  <ul style="margin-top: -14px;"><li>Tileset paths, sprite scale, tile scale, screen size, etc.</li></ul>
-                </li>
-                <li>Use tiles from different tilesets</li>
-                <li>Draw on multiple layers</li>
-                <li>Undo / Redo</li>
-                <li>Smooth zooming in / out</li>
-                <li>Ambient light editor using real shaders</li>
-                <li>Shape drawing (lines, rectangles, points)</li>
-                <li>Entity list for viewing and updating properties of all map objects</li>
-                <li>More coming soon!</li>
-            </ul>
+        <h3>Map editor</h3>
+        <img src="images/lime2d/map_editor_2.png" class="roundImage"
+             style="width: 400px; margin-left: 00px; margin-top: 14px;" alt="map editor"/>
+        <img src="images/lime2d/map_editor_3.png" class="roundImage"
+             style="width: 400px; margin-left: 10px; margin-top: 14px;" alt="map editor"/>
+        <ul>
+            <li>Efficient custom map format created by me</li>
+            <li>Create brand news maps of any size while already in-game</li>
+            <li>
+                Easy map configuration
+                <ul style="margin-top: -14px;">
+                    <li>Tileset paths, sprite scale, tile scale, screen size, etc.</li>
+                </ul>
+            </li>
+            <li>Use tiles from different tilesets</li>
+            <li>Draw on multiple layers</li>
+            <li>Undo / Redo</li>
+            <li>Smooth zooming in / out</li>
+            <li>Ambient light editor using real shaders</li>
+            <li>Shape drawing (lines, rectangles, points)</li>
+            <li>Entity list for viewing and updating properties of all map objects</li>
+            <li>More coming soon!</li>
+        </ul>
         </p>
         <hr/>
         <p>
-          <h3>Animation editor</h3>
-          <img src="images/lime2d/animation_editor_3.png" class="roundImage" style="width: 400px; margin-left: 00px; margin-top: 14px;" alt="animation editor" />
-          <img src="images/lime2d/animation_editor_1.png" class="roundImage" style="width: 400px; margin-left: 10px; margin-top: 14px;" alt="animation editor" />
-          <ul>
+        <h3>Animation editor</h3>
+        <img src="images/lime2d/animation_editor_3.png" class="roundImage"
+             style="width: 400px; margin-left: 00px; margin-top: 14px;" alt="animation editor"/>
+        <img src="images/lime2d/animation_editor_1.png" class="roundImage"
+             style="width: 400px; margin-left: 10px; margin-top: 14px;" alt="animation editor"/>
+        <ul>
             <li>Stored efficiently in Lua files</li>
             <li>
-              Create / load any animation with already in-game
-              <ul style="margin-top: -14px;"><li>Saving the animation will automatically update it in-game without restarting the game</li></ul>
+                Create / load any animation with already in-game
+                <ul style="margin-top: -14px;">
+                    <li>Saving the animation will automatically update it in-game without restarting the game</li>
+                </ul>
             </li>
             <li>Zoom in / out</li>
             <li>Change any animation properties from within the editor</li>
-            </ul>
+        </ul>
         </p>
-        <hr />
+        <hr/>
         <p>
-            For more information about Lime2D, please check out the project's <a href="http://www.patreon.com/limeoats" target="_blank">Patreon page</a>.
+            For more information about Lime2D, please check out the project's <a href="http://www.patreon.com/limeoats"
+                                                                                 target="_blank">Patreon page</a>.
         </p>
-        <br />
-      </div>
-      <br />
-      <div id="disqus_thread"></div>
-        <script type="text/javascript">
-            /* * * CONFIGURATION VARIABLES * * */
-            var disqus_shortname = 'limeoats';
-            /* * * DON'T EDIT BELOW THIS LINE * * */
-            (function() {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-        </script>
-      <div>
+        <br/>
+    </div>
+    <br/>
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES * * */
+        var disqus_shortname = 'limeoats';
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function () {
+            var dsq = document.createElement('script');
+            dsq.type = 'text/javascript';
+            dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <div>
         <footer class="site-footer">
-          <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
+            <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
         </footer>
-      </div>
-    </section>
-  </body>
+    </div>
+</section>
+</body>
 </html>
